# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malloy"
version = "2022.1003-alpha"
description = "Malloy is an experimental language for describing data relationships and transformations"
readme = "README.md"
# authors = [{name="", email=""}]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
]
keywords = ["malloy"]
dependencies = [
    "duckdb",
    "google-cloud-bigquery"
]
requires-python = ">3.9"

[project.optional-dependencies]
dev = ["pytest", "pip-tools"]

[project.urls]
Github = "https://github.com/malloydata/malloy-py"

[project.scripts]
malloy = "malloy.__main__:main"

[tool.bumpver]
current_version = "2022.1003-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/malloy/__init__.py" = ["{version}"]

[tool.pytest.ini_options]
# addopts = "--log-cli-level 10" #DEBUG
# addopts = "--log-cli-level 20" #INFO
# addopts = "--log-cli-level 30" #WARNING
# addopts = "--log-cli-level 40" #ERROR
# addopts = "--log-cli-level 50" #CRITICAL